--- a/flutter_rpg/pubspec.yaml
+++ b/flutter_rpg/pubspec.yaml
@@ -60,8 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/vocations/ 
-    - assets/img/skills/
+    - assetes/img/skills/
+    - assetes/img/vocations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
